libiscsi_usr_srcs = files([
  'context.c',
  'misc.c',
  'session.c',
  'sysfs.c',
  'iface.c',
  'idbm.c',
  'node.c',
  'default.c'])

libiscsi_usr_public_includes = include_directories('libopeniscsiusr')
libiscsi_usr_private_includes = include_directories('.')

subdir('libopeniscsiusr')
subdir('tests')
subdir('docs')
